--- a/nautobot_consumables/templates/nautobot_consumables/inc/bulk_edit_table.html
+++ b/nautobot_consumables/templates/nautobot_consumables/inc/bulk_edit_table.html
@@ -3,20 +3,20 @@
 <div class="panel panel-default">
     <div class="panel-heading">
         <div class="pull-right">
-{% if bulk_modify and permissions.change %}
-            <a class="btn btn-primary btn-xs" href="{{ object.get_absolute_url }}/edit/?return_url={{ request.path }}">
+{% if bulk_modify and perms.change %}
+            <a class="btn btn-primary btn-xs" href="{{ object.get_absolute_url }}/edit/?return_url={% if return_url %}{{ return_url }}{% else %}{{ request.path }}{% endif %}">
                 <span class="mdi mdi-pencil-box-multiple" aria-hidden="true"></span> Edit All
             </a>
 {% endif %}
-{% if add_url and permissions.add %}
-            <a class="btn btn-primary btn-xs" href="{% url add_url %}?return_url={{ request.path }}{% if add_querystring %}&{{ add_querystring }}{% endif %}">
+{% if add_url and perms.add %}
+            <a class="btn btn-primary btn-xs" href="{% url add_url %}?return_url={% if return_url %}{{ return_url }}{% else %}{{ request.path }}{% endif %}{% if add_querystring %}&{{ add_querystring }}{% endif %}">
                 <span class="mdi mdi-plus-thick" aria-hidden="true"></span> Add
             </a>
 {% endif %}
         </div>
         <strong>{{ title }}</strong>
     </div>
-{% if permissions.change or permissions.delete %}
+{% if perms.change or perms.delete %}
     <form method="post" class="form form-horizontal">
         {% csrf_token %}
         <input type="hidden" name="return_url" value="{% if return_url %}{{ return_url }}{% else %}{{ request.path }}{% if request.GET %}?{{ request.GET.urlencode }}{% endif %}{% endif %}" />
@@ -30,12 +30,12 @@
                     </label>
                 </div>
                 <div class="pull-right">
-            {% if bulk_edit_url and permissions.change %}
+            {% if bulk_edit_url and perms.change %}
                     <button type="submit" name="_edit" formaction="{% url bulk_edit_url %}{% if bulk_querysetring %}?{{ bulk_querystring }}{% elif request.GET %}?{{ request.GET.urlencode }}{% endif %}" class="btn btn-warning btn-sm" disabled="disabled">
                         <span class="mdi mdi-pencil" aria-hidden="true"></span> Edit All
                     </button>
             {% endif %}
-            {% if bulk_delete_url and permissions.delete %}
+            {% if bulk_delete_url and perms.delete %}
                     <button type="submit" name="_delete" formaction="{% url bulk_delete_url %}{% if bulk_querystring %}?{{ bulk_querystring }}{% elif request.GET %}?{{ request.GET.urlencode }}{% endif %}" class="btn btn-danger btn-sm" disabled="disabled">
                         <span class="mdi mdi-trash-can-outline" aria-hidden="true"></span> Delete All
                     </button>
@@ -50,12 +50,12 @@
         <div class="panel-footer noprint">
             {% block extra_actions %}{% endblock extra_actions %}
         {% if table.rows|length > 0 %}
-            {% if bulk_edit_url and permissions.change %}
+            {% if bulk_edit_url and perms.change %}
                 <button type="submit" name="_edit" formaction="{% url bulk_edit_url %}" class="btn btn-{{ edit_class | default:"warning" }} btn-xs">
                     <span class="mdi {{ edit_icon | default:"mdi-pencil" }}" aria-hidden="true"></span> {{ edit_text | default:"Edit Selected" }}
                 </button>
             {% endif %}
-            {% if bulk_delete_url and permissions.delete %}
+            {% if bulk_delete_url and perms.delete %}
                 <button type="submit" name="_delete" formaction="{% url bulk_delete_url %}" class="btn btn-{{ delete_class | default:"danger" }} btn-xs">
                     <span class="mdi {{ delete_icon | default:"mdi-trash-can-outline" }}" aria-hidden="true"></span> {{ delete_text | default:"Delete Selected" }}
                 </button>
