Update bulk update/destroy views
Use the preferred `get_table_class` method for finding the proper table for bulk update and delete views.

Small tweaks to improve the tables in the bulk update and delete views.

Run both linter and format if using ruff with the `test.everything` task for local testing and linting.

Signed-off-by: Mark Troyer <mtroyer@nvidia.com>

--- a/nautobot_consumables/templates/nautobot_consumables/consumablepool_bulk_destroy.html
+++ b/nautobot_consumables/templates/nautobot_consumables/consumablepool_bulk_destroy.html
@@ -2,6 +2,6 @@
 
 {% block message_extra %}
     {% if display_warning %}
-                    <p>These Pools have checked out Consumables, they will also be removed.</p>
+                    <p>Some or all of these Pools have checked out Consumables, these will be removed from their assigned Devices.</p>
     {% endif %}
 {% endblock message_extra %}
